--- a/index.html
+++ b/index.html
@@ -40,9 +40,19 @@
 
     <table>
       <tr>
+        <th id="empty-row">
+        </th>
+      </tr>
+      <tr>
         <th>About</br> Me</th>
         <td>
-          <p class="about-paragraph"> Hi! My name is Ana and I'm currently learning frontend Web Development. My favorite learning topic is UX design. Having worked in Customer Success and Account Management, I have learnt to better understand users and develop features that satisfy their needs.</br></br> I have an educational background in Business Administration, where I have focused on Strategic Management, Organization and Personnel, and Electronic Business.</br></br> In my free time, I enjoy going for a walk while having a coffee. </td>
+          <p class="about-paragraph"> Hi! My name is Ana and I'm currently learning frontend Web Development. My
+            favorite learning topic is UX design. Having worked in Customer Success and Account Management, I have
+            learnt to better understand users and develop features that satisfy their needs.</br></br> I have an
+            educational background in Business Administration, where I have focused on Strategic Management,
+            Organization and Personnel, and Electronic Business.</br></br> In my free time, I enjoy going for a walk
+            while having a coffee.
+        </td>
       </tr>
       <tr>
         <th id="empty-row">
@@ -50,26 +60,25 @@
       </tr>
       <tr>
         <th>Work</th>
-        <td>
-          <!-- <div class="subHeading">
-            <h3>Work</h3>
-          </div> -->
+        <td class="category-grid-cell">
           <section id="categoryGrid">
-            <div id="code-refactor" class="categoryGridArea">
-              <div class="heading">Code Refactor</div>
-            </div>
-            <div id="project2" class="categoryGridArea">
+            <a id="code-refactor" href="https://anadomuta.github.io/challenge-horiseon-accessibility/" target="_blank"
+              class="categoryGridArea">
+              <div class="heading">Code Refactor<h4>HTML/CSS</h4>
+              </div>
+            </a>
+            <a id="project2" href="#" class="categoryGridArea">
               <div class="heading">Project 2</div>
-            </div>
-            <div id="project3" class="categoryGridArea">
-              <div class="heading">Project 3</div>
-            </div>
-            <div id="project4" class="categoryGridArea">
-              <div class="heading">Project 4</div>
-            </div>
-            <div id="project5" class="categoryGridArea">
-              <div class="heading">Project 5</div>
-            </div>
+            </a>
+              <a id="project3" href="#" class="categoryGridArea">
+                <div class="heading">Project 3</div>
+              </a>
+              <a id="project4" href="#" class="categoryGridArea">
+                <div class="heading">Project 4</div>
+              </a>
+              <a id="project5" href="#" class="categoryGridArea">
+                <div class="heading">Project 5</div>
+              </a>
           </section>
         </td>
       </tr>
