added media queries for flex

--- a/index.html
+++ b/index.html
@@ -30,76 +30,55 @@
 
   <!-- Banner -->
   <section class="hero-image">
-    <!-- <h2 id="welcome">Welcome to my portfolio!</h2> -->
     <img id="bio-image" src="./starter/assets/images/bio-img-no-background.PNG" alt="Bio image" />
   </section>
 
   <!--Main Content-->
   <main class="page-wrapper">
     <!-- About Me -->
+    <section class="aboutMe">
+      <h3>About Me</h3>
+      <p class="about-paragraph"> Hi! My name is Ana and I'm currently learning frontend Web Development. My
+        favorite learning topic is UX design. Having worked in Customer Success and Account Management, I have
+        learnt to better understand users and develop features that satisfy their needs.</br></br> I have an
+        educational background in Business Administration, where I have focused on Strategic Management,
+        Organization and Personnel, and Electronic Business.</br></br> In my free time, I enjoy going for a walk
+        while having a coffee.
+      </p>
+    </section>
 
-    <table>
-      <tr>
-        <th id="empty-row">
-        </th>
-      </tr>
-      <tr>
-        <th>About</br> Me</th>
-        <td>
-          <p class="about-paragraph"> Hi! My name is Ana and I'm currently learning frontend Web Development. My
-            favorite learning topic is UX design. Having worked in Customer Success and Account Management, I have
-            learnt to better understand users and develop features that satisfy their needs.</br></br> I have an
-            educational background in Business Administration, where I have focused on Strategic Management,
-            Organization and Personnel, and Electronic Business.</br></br> In my free time, I enjoy going for a walk
-            while having a coffee.
-        </td>
-      </tr>
-      <tr>
-        <th id="empty-row">
-        </th>
-      </tr>
-      <tr>
-        <th>Work</th>
-        <td class="category-grid-cell">
-          <section id="categoryGrid">
-            <a id="code-refactor" href="https://anadomuta.github.io/challenge-horiseon-accessibility/" target="_blank"
-              class="categoryGridArea">
-              <div class="heading">Code Refactor<h4>HTML/CSS</h4>
-              </div>
-            </a>
-            <a id="project2" href="#" class="categoryGridArea">
-              <div class="heading">Project 2</div>
-            </a>
-              <a id="project3" href="#" class="categoryGridArea">
-                <div class="heading">Project 3</div>
-              </a>
-              <a id="project4" href="#" class="categoryGridArea">
-                <div class="heading">Project 4</div>
-              </a>
-              <a id="project5" href="#" class="categoryGridArea">
-                <div class="heading">Project 5</div>
-              </a>
-          </section>
-        </td>
-      </tr>
-      <tr>
-        <th id="empty-row">
-        </th>
-      </tr>
-      <tr>
-        <th>Contact Me</th>
-        <td>
-          <section class="contact">
-            <article>
-              <p class="contact">
-                <a href="https://www.linkedin.com/in/ana-domuta/" target="_blank">LinkedIn</a>
-                <a href="https://github.com/anadomuta" target="_blank">GitHub</a>
-              </p>
-            </article>
-          </section>
-        </td>
-      </tr>
-    </table>
+    <section class="work">
+      <h3>Work</h3>
+      <div id="categoryGrid">
+      <a id="code-refactor" href="https://anadomuta.github.io/challenge-horiseon-accessibility/" target="_blank"
+        class="categoryGridArea">
+        <div class="heading">Code Refactor<h4>HTML/CSS</h4>
+        </div>
+      </a>
+      <a id="project2" href="#" class="categoryGridArea">
+        <div class="heading">Project 2</div>
+      </a>
+      <a id="project3" href="#" class="categoryGridArea">
+        <div class="heading">Project 3</div>
+      </a>
+      <a id="project4" href="#" class="categoryGridArea">
+        <div class="heading">Project 4</div>
+      </a>
+      <a id="project5" href="#" class="categoryGridArea">
+        <div class="heading">Project 5</div>
+      </a>
+    </div>
+    </section>
+
+    <section class="contact">
+      <h3>Contact Me</h3>
+      <article>
+        <p class="contact-links">
+          <a href="https://www.linkedin.com/in/ana-domuta/" target="_blank">LinkedIn</a>
+          <a href="https://github.com/anadomuta" target="_blank">GitHub</a>
+        </p>
+      </article>
+    </section>
   </main>
 
 </body>
