consolidating css elements

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </section>
 
     <section class="contact">
-      <h3>Contact Me</h3>
+      <h3>Contact<br>Me</h3>
       <article>
         <p class="contact-links">
           <a href="https://www.linkedin.com/in/ana-domuta/" target="_blank">LinkedIn</a>
