commented css file

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </section>
 
   <!--Main Content-->
-  <main class="page-wrapper">
+  <main>
     <!-- About Me -->
     <section class="aboutMe">
       <h3>About Me</h3>
@@ -46,7 +46,7 @@
         while having a coffee.
       </p>
     </section>
-
+ <!-- Work portfolio -->
     <section class="work">
       <h3>Work</h3>
       <div id="categoryGrid">
@@ -69,7 +69,7 @@
       </a>
     </div>
     </section>
-
+ <!-- Contact details -->
     <section class="contact">
       <h3>Contact<br>Me</h3>
       <article>
