adjusted copy on README

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <section class="aboutMe">
       <div><h3>About Me</h3></div>
       <p class="about-paragraph"> Hi! My name is Ana and I'm currently learning frontend Web Development. My
-        favorite learning topic is UX design. Having worked in Customer Success and Account Management, I have
+        favorite topic is UX design. Having worked in Customer Success and Account Management, I have
         learnt to better understand users and develop features that satisfy their needs.</br></br> I have an
         educational background in Business Administration, where I have focused on Strategic Management,
         Organization and Personnel, and Electronic Business.</br></br> In my free time, I enjoy going for a walk
