--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <main>
     <!-- About Me -->
     <section class="aboutMe">
-      <div><h3>About Me</h3></div>
+      <h3>About Me</h3>
       <p class="about-paragraph"> Hi! My name is Ana and I'm currently learning frontend Web Development. My
         favorite topic is UX design. Having worked in Customer Success and Account Management, I have
         learnt to better understand users and develop features that satisfy their needs.</br></br> I have an
@@ -48,7 +48,7 @@
     </section>
  <!-- Work portfolio -->
     <section class="work">
-      <div><h3>Work</h3></div>
+      <h3>Work</h3>
       <div id="categoryGrid">
       <a id="code-refactor" href="https://anadomuta.github.io/challenge-horiseon-accessibility/" target="_blank"
         class="categoryGridArea">
@@ -71,7 +71,7 @@
     </section>
  <!-- Contact details -->
     <section class="contact">
-      <div><h3>Contact <br> Me</h3></div>
+      <h3>Contact <br> Me</h3>
       <article>
         <p class="contact-links">
           <a href="https://www.linkedin.com/in/ana-domuta/" target="_blank">LinkedIn</a>
