--- a/index.html
+++ b/index.html
@@ -35,52 +35,49 @@
 
   <!--Main Content-->
   <main>
-    <!-- About Me -->
-    <section class="aboutMe">
-      <h3>About Me</h3>
-      <p class="about-paragraph"> Hi! My name is Ana and I'm currently learning frontend Web Development. My
-        favorite topic is UX design. Having worked in Customer Success and Account Management, I have
-        learnt to better understand users and develop features that satisfy their needs.</br></br> I have an
-        educational background in Business Administration, where I have focused on Strategic Management,
-        Organization and Personnel, and Electronic Business.</br></br> In my free time, I enjoy going for a walk
-        while having a coffee.
-      </p>
-    </section>
-    <!-- Work portfolio -->
-    <section class="work">
-      <h3>Work</h3>
-      <div id="categoryGrid">
-        <a id="code-refactor" href="https://anadomuta.github.io/challenge-horiseon-accessibility/" target="_blank"
-          class="categoryGridArea">
-          <div class="heading">Code Refactor<h4>HTML/CSS</h4>
-          </div>
-        </a>
-        <a id="project2" href="#" class="categoryGridArea">
-          <div class="heading">Project 2</div>
-        </a>
-        <a id="project3" href="#" class="categoryGridArea">
-          <div class="heading">Project 3</div>
-        </a>
-        <a id="project4" href="#" class="categoryGridArea">
-          <div class="heading">Project 4</div>
-        </a>
-        <a id="project5" href="#" class="categoryGridArea">
-          <div class="heading">Project 5</div>
-        </a>
+
+    <section class="grid-container">
+      <!-- About Me -->
+      <div id="about-left"">About Me</div>
+<div id=" about-paragraph"> Hi there! I'm Ana and I'm currently on a journey to upskill myself fo the tech industry in
+        the area of Web Development. Having worked in Customer Success before, I'm hoping this experience will help me
+        create beautiful user-centric web apps. I'm passionate about
+        UX design and understanding what the user wants.<br><br> Educationally, I have a MSc. in Business Administration
+        from the University of Vienna and a BSc. from the University of Cologne. <br><br>I love learning about new
+        cultures and currently speak three languages fluently. I'm still working on a fourth language which is Spanish.
       </div>
-    </section>
-    <!-- Contact details -->
-    <section class="contact">
-      <h3>Contact <br> Me</h3>
-      <article>
+      <!-- Work portfolio -->
+      <div id="work-left">Work</div>
+      <div id="work-grid">
+        <div id="categoryGrid">
+          <a id="code-refactor" href="https://anadomuta.github.io/challenge-horiseon-accessibility/" target="_blank"
+            class="categoryGridArea">
+            <div class="heading">Code Refactor<h4>HTML/CSS</h4>
+            </div>
+          </a>
+          <a id="project2" href="#" class="categoryGridArea">
+            <div class="heading">Project 2</div>
+          </a>
+          <a id="project3" href="#" class="categoryGridArea">
+            <div class="heading">Project 3</div>
+          </a>
+          <a id="project4" href="#" class="categoryGridArea">
+            <div class="heading">Project 4</div>
+          </a>
+          <a id="project5" href="#" class="categoryGridArea">
+            <div class="heading">Project 5</div>
+          </a>
+        </div>
+      </div>
+      <!-- Contact details -->
+      <div id="contact-left">Contact Me</div>
+      <div id="contact-details">
         <p class="contact-links">
           <a href="https://www.linkedin.com/in/ana-domuta/" target="_blank">LinkedIn</a>
           <a href="https://github.com/anadomuta" target="_blank">GitHub</a>
         </p>
-      </article>
+      </div>
     </section>
-  </main>
-
 </body>
 
 <!-- Footer -->
