adjusted folder structure

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Ana Domuța | Web Developer</title>
-  <link rel="stylesheet" href="starter/assets/css/style.css" />
+  <link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body>
@@ -16,13 +16,13 @@
       <h1>Ana Domuta</h1>
       <ul>
         <li>
-          <a href="#about">ABOUT</a>
+          <a href="#about-left">ABOUT</a>
         </li>
         <li>
-          <a href="#work">WORK</a>
+          <a href="#work-left">WORK</a>
         </li>
         <li>
-          <a href="#contact">CONTACT</a>
+          <a href="#contact-left">CONTACT</a>
         </li>
       </ul>
     </nav>
@@ -30,7 +30,7 @@
 
   <!-- Banner -->
   <section class="hero-image">
-    <img id="bio-image" src="./starter/assets/images/bio-img-no-background.PNG" alt="Bio image" />
+    <img id="bio-image" src="./images/bio-img-no-background.PNG" alt="Bio image" />
   </section>
 
   <!--Main Content-->
