--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Ana Domuța | Web Developer</title>
   <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="./css/aos.css">
 </head>
 
 <body>
   <header>
     <!--Navbar-->
     <nav class="navBar">
+      <div class="myname" data-aos="fade-top">
       <h1>Ana Domuta</h1>
+    </div>
       <ul>
         <li>
           <a href="#about-left">ABOUT</a>
@@ -30,7 +33,7 @@
 
   <!-- Banner -->
   <section class="hero-image">
-    <img id="bio-image" src="./images/bio-img-no-background.PNG" alt="Bio image" />
+    <img id="bio-image" src="./images/bio-img-no-background.PNG" alt="Bio image" class="img-fluid" data-aos="fade-top">
   </section>
 
   <!--Main Content-->
@@ -38,8 +41,9 @@
 
     <section class="grid-container">
       <!-- About Me -->
-      <div id="about-left"">About Me</div>
-<div id="about-paragraph"> Hi there! I'm Ana and I'm currently on a journey to upskill myself for the tech industry in
+      <div data-aos="fade-right" id="about-left">About Me</div>
+      <div data-aos="fade-down" id="about-paragraph"> Hi there! I'm Ana and I'm currently on a journey to upskill myself for the tech
+        industry in
         the area of Web Development. Having worked in Customer Success before, I'm hoping this experience will help me
         create beautiful user-centric web apps. I'm passionate about
         UX design and understanding what the user wants.<br><br> Educationally, I have a MSc. in Business Administration
@@ -47,30 +51,30 @@
         cultures and currently speak three languages fluently. I'm still working on a fourth language which is Spanish.
       </div>
       <!-- Work portfolio -->
-      <div id="work-left">Work</div>
-      <div id="work-grid">
+      <div data-aos="fade-right" id="work-left">Work</div>
+      <div data-aos="fade-top" id="work-grid">
         <div id="categoryGrid">
-          <a id="code-refactor" href="https://anadomuta.github.io/challenge-horiseon-accessibility/" target="_blank"
+          <a data-aos="fade-top" id="code-refactor" href="https://anadomuta.github.io/challenge-horiseon-accessibility/" target="_blank"
             class="categoryGridArea">
             <div class="heading">Code Refactor<h4>HTML/CSS</h4>
             </div>
           </a>
-          <a id="project2" href="#" class="categoryGridArea">
+          <a data-aos="fade-right" id="project2" href="#" class="categoryGridArea">
             <div class="heading">Project 2</div>
           </a>
-          <a id="project3" href="#" class="categoryGridArea">
+          <a data-aos="fade-left" id="project3" href="#" class="categoryGridArea">
             <div class="heading">Project 3</div>
           </a>
-          <a id="project4" href="#" class="categoryGridArea">
+          <a data-aos="fade-right" id="project4" href="#" class="categoryGridArea">
             <div class="heading">Project 4</div>
           </a>
-          <a id="project5" href="#" class="categoryGridArea">
+          <a data-aos="fade-left" id="project5" href="#" class="categoryGridArea">
             <div class="heading">Project 5</div>
           </a>
         </div>
       </div>
       <!-- Contact details -->
-      <div id="contact-left">Contact Me</div>
+      <div data-aos="fade-right" id="contact-left">Contact Me</div>
       <div id="contact-details">
         <p class="contact-links">
           <a href="https://www.linkedin.com/in/ana-domuta/" target="_blank">LinkedIn</a>
@@ -78,13 +82,19 @@
         </p>
       </div>
     </section>
-</body>
-
-<!-- Footer -->
-<footer>
-  <p>Made by Ana Domuta</br>
-    &copy; 2023
-  </p>
-</footer>
-
+    <!-- Footer -->
+    <footer>
+      <p>Made by Ana Domuta</br>
+        &copy; 2023
+      </p>
+    </footer>
+    <!-- Scripts -->
+    <script src="js/aos.js"></script>
+    <script>
+      AOS.init({
+        duration: 2000,
+      }
+      );
+    </script>
+    </body>
 </html>
